--- a/backend/src/requirements.txt
+++ b/backend/src/requirements.txt
@@ -1,6 +1,7 @@
 fastapi==0.109.2
 Jinja2==3.1.3
 pydantic==2.6.1
+pydantic-settings==2.1.0
 requests==2.31.0
 typing_extensions==4.9.0
 urllib3==2.2.0
