Added local and prod env vars for vpn_rotate_registration_token

--- a/playbook/vars/local.yml
+++ b/playbook/vars/local.yml
@@ -30,3 +30,7 @@ vpn_webserver_email: "{{ lookup('ansible.builtin.env', 'LOCAL_VPN_WEBSERVER_EMAI
 
 # Used by FASTAPI. The domain name and protocol of your server
 vpn_server_host: "{{ lookup('ansible.builtin.env', 'LOCAL_VPN_SERVER_HOST') }}"
+
+# Used to either generate a new registration token on redeploys, or persist it. [Boolean - true or false]
+vpn_rotate_registration_token: \
+  {{ ((lookup('ansible.builtin.env', 'LOCAL_VPN_ROTATE_REGISTRATION_TOKEN', default=True) | lower) == 'true') | bool }}
