Added binary should to either slurp or create new registration key in setup-compose sub-role

--- a/playbook/roles/deploy/tasks/setup-compose.yml
+++ b/playbook/roles/deploy/tasks/setup-compose.yml
@@ -1,10 +1,19 @@
 ---
-- name: Generate wireguard server token, and read into var
+- name: Generate wireguard registration token, and read into var
   ansible.builtin.shell:
     cmd: set -o pipefail && tr -dc A-Za-z0-9 </dev/urandom | head -c 25; echo ''
     executable: /bin/bash
   register: vpn_registration_token
   changed_when: true
+  when: vpn_rotate_registration_token
+
+- name: Persist wireguard registration token, and read into var
+  ansible.builtin.shell:
+    cmd: grep "WG_VPN_REGISTRATION_TOKEN=" /home/docker-compose.yml | awk -F "=" '{print $2}'
+    executable: /bin/bash
+  register: vpn_registration_token
+  changed_when: true
+  when: not vpn_rotate_registration_token
 
 - name: Read remote Public key into var
   become: true
