--- a/playbook/roles/docker/tasks/secure-docker.yml
+++ b/playbook/roles/docker/tasks/secure-docker.yml
@@ -1,11 +1,11 @@
 ---
-- name: Test for docker iptables config
+- name: Secure docker | Test for docker iptables config
   become: true
   ansible.builtin.shell: grep -c "^iptables=false" /etc/default/docker || true
   register: secure_docker_iptables
   changed_when: secure_docker_iptables.stdout == "0"
 
-- name: Add iptables fix for docker
+- name: Secure docker | Add iptables fix for docker
   become: true
   ansible.builtin.lineinfile:
     dest: /etc/default/docker
@@ -14,7 +14,7 @@
     mode: "0644"
   when: secure_docker_iptables.stdout == "0"
 
-- name: Reload docker to activate changes
+- name: Secure docker | Reload docker to activate changes
   become: true
   ansible.builtin.service:
     name: docker
