--- a/playbook/roles/deploy/tasks/setup-docker-images.yml
+++ b/playbook/roles/deploy/tasks/setup-docker-images.yml
@@ -1,5 +1,5 @@
 ---
-- name: Clear docker-compose
+- name: Setup Docker images | Clear docker-compose
   become: true
   ansible.builtin.command: docker-compose down --remove-orphans
   args:
@@ -7,7 +7,7 @@
   register: deploy_docker_down
   changed_when: deploy_docker_down.rc != 0
 
-- name: Pull docker compose images
+- name: Setup Docker images | Pull docker compose images
   become: true
   ansible.builtin.command: docker-compose pull
   args:
@@ -15,7 +15,7 @@
   register: deploy_docker_pull
   changed_when: deploy_docker_pull.rc != 0
 
-- name: Prune extraneous images
+- name: Setup Docker images | Prune extraneous images
   become: true
   ansible.builtin.command: docker image prune -f
   args:
@@ -23,7 +23,7 @@
   register: deploy_image_prune
   changed_when: deploy_image_prune.rc != 0
 
-- name: Start docker-compose
+- name: Setup Docker images | Start docker-compose
   become: true
   ansible.builtin.command: docker-compose up -d --build
   args:
@@ -31,13 +31,13 @@
   register: deploy_docker_startup
   changed_when: deploy_docker_startup.rc != 0
 
-- name: Clear static folder
+- name: Setup Docker images | Clear static folder
   become: true
   ansible.builtin.command: rm -rf /home/static
   register: deploy_clear_static_folder
   changed_when: deploy_clear_static_folder.rc != 0
 
-- name: Fill static folder
+- name: Setup Docker images | Fill static folder
   become: true
   ansible.builtin.command: docker cp wg-vpn:/code/static /home/static
   register: deploy_fill_static_folder
