deprecated nginx_local role / use single nginx role for both local and prod deployments

--- a/playbook/roles/nginx/tasks/main.yml
+++ b/playbook/roles/nginx/tasks/main.yml
@@ -1,46 +1,46 @@
 ---
-- name: Ensure nginx is latest version
+- name: Nginx | Ensure nginx is latest version
   become: true
   ansible.builtin.apt:
     name: nginx
     state: latest
 
-- name: Copy nginx config to server
+- name: Nginx | Copy nginx config to server
   become: true
   ansible.builtin.template:
-    src: templates/nginx.conf.j2
+    src: "templates/{{ nginx_config_file }}"
     dest: /etc/nginx/sites-available/default
     owner: www-data
     group: www-data
     mode: '0644'
 
-- name: Create a folder for custom error pages
+- name: Nginx | Create a folder for custom error pages
   become: true
   ansible.builtin.file:
     path: /etc/nginx/html
     state: directory
     mode: '0644'
 
-- name: Create symbolic link for nginx enabled sites
+- name: Nginx | Create symbolic link for nginx enabled sites
   become: true
   ansible.builtin.file:
     src: /etc/nginx/sites-available/default
     dest: /etc/nginx/sites-enabled/default
     state: link
 
-- name: Allow all access to tcp port 80
+- name: Nginx | Allow all access to tcp port 80
   community.general.ufw:
     rule: allow
     name: "Nginx HTTP"
   become: true
 
-- name: Allow all access to tcp port 443
+- name: Nginx | Allow all access to tcp port 443
   community.general.ufw:
     rule: allow
     name: "Nginx HTTPS"
   become: true
 
-- name: Start nginx
+- name: Nginx | Start nginx
   become: true
   ansible.builtin.service:
     name: nginx
