--- a/playbook/roles/run_first/tasks/setup-ssh.yml
+++ b/playbook/roles/run_first/tasks/setup-ssh.yml
@@ -1,9 +1,9 @@
 ---
-- name: List available public keys
+- name: Setup SSH | List available public keys
   ansible.builtin.debug:
     msg: "{{ lookup('fileglob', 'keys/*') }}"
 
-- name: Install root access public keys
+- name: Setup SSH | Install root access public keys
   become: true
   ansible.posix.authorized_key:
     user: "root"
@@ -12,11 +12,11 @@
   with_fileglob:
     - keys/root_*.pub
 
-- name: Display username
+- name: Setup SSH | Display username
   ansible.builtin.debug:
     msg: "{{ lookup('env', 'VM_USER') or vm_user }}"
 
-- name: Install all available public keys
+- name: Setup SSH | Install all available public keys
   ansible.posix.authorized_key:
     user: "{{ lookup('env', 'VM_USER') or vm_user }}"
     state: present
