--- a/playbook/roles/run_first/tasks/setup-ufw.yml
+++ b/playbook/roles/run_first/tasks/setup-ufw.yml
@@ -1,23 +1,23 @@
 ---
-- name: Set logging
+- name: Setup UFW | Set logging
   become: true
   community.general.ufw:
     logging: 'on'
 
-- name: UFW - Deny all other incoming traffic by default
+- name: Setup UFW | Deny all other incoming traffic by default
   become: true
   community.general.ufw:
     state: enabled
     policy: deny
     direction: incoming
 
-- name: Allow OpenSSH
+- name: Setup UFW | Allow OpenSSH
   become: true
   community.general.ufw:
     rule: allow
     name: OpenSSH
 
-- name: Allow UDP to port 51820
+- name: Setup UFW | Allow UDP to port 51820
   become: true
   community.general.ufw:
     rule: allow
