--- a/playbook/roles/fail2ban/tasks/main.yml
+++ b/playbook/roles/fail2ban/tasks/main.yml
@@ -8,28 +8,28 @@
 - name: Fail2ban | Copy portscan config to server
   become: true
   ansible.builtin.copy:
-    src: templates/portscan.conf
+    src: templates/fail2ban/portscan.conf
     dest: /etc/fail2ban/filter.d/portscan.conf
     mode: '0644'
 
 - name: Fail2ban | Copy nginx-chancers config to server
   become: true
   ansible.builtin.copy:
-    src: templates/nginx/nginx-chancers.conf
+    src: templates/fail2ban/nginx-chancers.conf
     dest: /etc/fail2ban/filter.d/nginx-chancers.conf
     mode: '0644'
 
 - name: Fail2ban | Copy ufw config to server
   become: true
   ansible.builtin.copy:
-    src: templates/ufw-ps.conf
+    src: templates/fail2ban/ufw-ps.conf
     dest: /etc/fail2ban/action.d/ufw-ps.conf
     mode: '0644'
 
 - name: Fail2ban | Copy jail config to server
   become: true
   ansible.builtin.copy:
-    src: templates/jail.local
+    src: templates/fail2ban/jail.local
     dest: /etc/fail2ban/jail.local
     mode: '0644'
 
