ansible linted roles

--- a/playbook/deploy-local.yml
+++ b/playbook/deploy-local.yml
@@ -8,6 +8,6 @@
   roles:
     - role: run_first
     - role: fail2ban
-    - role: nginx_local
+    - role: nginx
     - role: docker
     - role: deploy
